# agent-passport-system

./: .gitignore  .gitleaksignore  .npmignore  AGENTS.md  BUILD-PLAN-ACTION-REF-FRESHNESS.md  BUILD-PLAN-EVIDENCE-GRADE.md  BUILD-SPEC-AGENT-JSON.md  CC-PROMPT-COMMERCE-IDEMPOTENCY.md  CC-PROMPT-EVIDENCE-GRADE.md  CC-PROMPT-FORENSIC-ATTRIBUTION.md  CC-PROMPT-PRODUCT-RESTRUCTURE.md  CC-PROMPT-PUBLISH-CHAIN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_PATH.md  Cargo.toml  GOVERNANCE_SURFACES.md  INTEGRATION.md  MIGRATION.md  NOTICE  OPEN_PROBLEMS.md  README.md  SECURITY.md  THREAT_MODEL.md  agent-passport-system-1.10.2.tgz  agent-passport-system-1.11.0.tgz  diag.ts  llms.txt  package-lock.json  package.json  test-agent-passport.json  tsconfig.json
benchmarks/prototype-1/: Cargo.toml  README.md
benchmarks/prototype-1/configs/: aws-c7i-gp3.toml  bare-metal-linux.toml  mac-apple-silicon.toml
benchmarks/prototype-1/results/: README.md
benchmarks/prototype-1/results/aws-c7i-gp3/: L0-concurrent-1.json  L0-concurrent-16.json  L0-concurrent-2.json  L0-concurrent-4.json  L0-concurrent-8.json  L0.json  L1-concurrent-1.json  L1-concurrent-16.json  L1-concurrent-2.json  L1-concurrent-4.json  L1-concurrent-8.json  L1.json  L2.json  L3a.json  (+4 more)
benchmarks/prototype-1/scripts/: run-canonical.sh  seed-l4-tenant.sh
benchmarks/prototype-1/src/: batch.rs  env_capture.rs  main.rs  stats.rs  workload.rs
crates/aps-verifier-core/: Cargo.toml
crates/aps-verifier-core/benches/: aps_check.rs
crates/aps-verifier-core/src/: action.rs  approval.rs  check.rs  clock.rs  compiled.rs  decision.rs  durability.rs  key_derivation.rs  lib.rs  passport.rs  receipt_log.rs  recovery.rs  registry.rs  resource_trie.rs
crates/aps-verifier-core/tests/: approval.rs  aps_check.rs  clock.rs  compiled.rs  crypto.rs  durability_mode_a.rs  durability_mode_b1.rs  durability_mode_b2.rs  key_derivation.rs  recovery.rs  registry.rs  resource_trie.rs  spec_round_trip.rs  wire_format.rs
(+938 files in other folders)
