[package]
name = "aps-bench-prototype-1"
version = "0.0.1"
edition = "2021"
description = "APS Runtime Passport Prototype 1 benchmark harness (Stream C)"
license = "Apache-2.0"
publish = false

# Narrow Stream C scope: L0 + L1 only. L2/L3 land with Stream B; L4
# (gateway baseline) is an independent task. Concurrency sweep
# deferred.

[[bin]]
name = "aps-bench"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
aps-verifier-core = { path = "../../crates/aps-verifier-core" }
