[package]
name = "aps-verifier-core"
version = "0.0.1"
edition = "2021"
description = "APS Runtime Passport local verifier core (Prototype 1)"
license = "Apache-2.0"

[dependencies]
blake3 = "1"
ed25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
thiserror = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tempfile = "3"

[[bench]]
name = "aps_check"
harness = false
